--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node aufgabe3.1/script.js"
+    "start": "node aufgabe3.1/server.js"
   },
   "repository": {
     "type": "git",
