--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/benjamin-maier/GIS-SoSe2021/issues"
   },
-  "homepage": "https://github.com/benjamin-maier/GIS-SoSe2021#readme"
+  "homepage": "https://github.com/benjamin-maier/GIS-SoSe2021#readme",
+  "dependencies": {
+    "@types/mongodb": "^3.6.18",
+    "mongodb": "^3.6.9"
+  }
 }
